name:               ghc-vis
version:            0.5
license:            BSD3
license-file:       LICENSE
category:           GHC, Debug, Development
cabal-version:      >= 1.10
build-type:         Custom
author:             Dennis Felsing <dennis@felsin9.de>
maintainer:         Dennis Felsing <dennis@felsin9.de>
homepage:           http://felsin9.de/nnis/ghc-vis
copyright:          Dennis Felsing 2012
synopsis:           Live visualization of data structures in GHCi
description:        Visualize live data structures in GHCi. Evaluation is not
                    forced and you can interact with the visualized data
                    structures. This allows seeing Haskell's lazy evaluation
                    and sharing in action.
                    .
                    See <http://felsin9.de/nnis/ghc-vis/#basic-usage> for the
                    basic usage of ghc-vis or watch a short video demonstrating
                    how it can be used with GHCi's debugger:
                    <http://felsin9.de/nnis/ghc-vis/#combined-debugger>

tested-with: GHC == 7.4.1, GHC == 7.4.2, GHC == 7.6.1
data-files: ghci
Extra-source-files: nonghci-test.hs

flag graph
  Default: True
  Description: "Enable graph view using Graphviz"

Library
  Exposed-modules: GHC.Vis
  Other-modules: GHC.Vis.Internal GHC.Vis.Types GHC.Vis.View.List GHC.Vis.View.Common
  Default-Language: Haskell2010
  Build-depends: base == 4.*,
                 mtl >= 2.0,
                 fgl,
                 deepseq,
                 text,
                 transformers,
                 gtk == 0.12.*,
                 cairo == 0.12.*,
                 ghc-heap-view >= 0.3.0.3
  Hs-source-dirs: src/
  Ghc-options: -Wall -fno-warn-unused-do-bind

  if flag(graph)
      Other-modules: GHC.Vis.View.Graph.Parser GHC.Vis.View.Graph
      Build-depends: graphviz >= 2999.14.1.0,
                     xdot >= 0.2
      Cpp-options: -DGRAPH_VIEW

--source-repository head
--    type:     darcs
--    location: http://
