name:               ghc-vis
version:            0.7.0.1
license:            BSD3
license-file:       LICENSE
category:           GHC, Debug, Development
cabal-version:      >= 1.10
build-type:         Custom
author:             Dennis Felsing, Joachim Breitner
maintainer:         Dennis Felsing <dennis@felsin9.de>
homepage:           http://felsin9.de/nnis/ghc-vis
copyright:          Dennis Felsing 2012-2013
synopsis:           Live visualization of data structures in GHCi
description:        Visualize live data structures in GHCi. Evaluation is not
                    forced and you can interact with the visualized data
                    structures. This allows seeing Haskell's lazy evaluation
                    and sharing in action.
                    .
                    See <http://felsin9.de/nnis/ghc-vis/#basic-usage> for the
                    basic usage of ghc-vis or watch a short video demonstrating
                    how it can be used with GHCi's debugger:
                    <http://felsin9.de/nnis/ghc-vis/#combined-debugger>

tested-with: GHC == 7.4.1, GHC == 7.4.2, GHC == 7.6.1, GHC == 7.6.2, GHC == 7.6.3
data-files: ghci data/main.ui data/welcome.svg data/legend_graph.svg data/legend_list.svg data/icon_collapse.svg data/icon_evaluate.svg data/hover_collapse.svg data/hover_evaluate.svg
Extra-source-files: nonghci-test.hs

flag graph
  Default: True
  Description: "Enable graph view using Graphviz"

flag full
  Default: True
  Description: "Full ghc-vis window: decorations, buttons, legend"

--flag sdl
--  Default: False
--  Description: "SDL window"

Library
  Exposed-modules: GHC.Vis
  Other-modules: GHC.Vis.Internal GHC.Vis.Types GHC.Vis.View.List GHC.Vis.View.Common Paths_ghc_vis
  Default-Language: Haskell2010
  Build-depends: base >= 4.5 && < 4.7,
                 mtl >= 2.0 && < 2.2,
                 fgl == 5.4.*,
                 deepseq == 1.3.*,
                 text == 0.11.*,
                 transformers == 0.3.*,
                 containers >= 0.4 && < 0.6,
                 gtk == 0.12.*,
                 svgcairo == 0.12.*,
                 cairo == 0.12.*,
                 ghc-heap-view == 0.5.*
  Hs-source-dirs: src/
  Ghc-options: -Wall -fno-warn-unused-do-bind

  if flag(graph)
      Other-modules: GHC.Vis.View.Graph.Parser GHC.Vis.View.Graph
      Build-depends: graphviz == 2999.16.*,
                     xdot == 0.2.*
      Cpp-options: -DGRAPH_VIEW

  if flag(full)
      Cpp-options: -DFULL_WINDOW

  --if flag(sdl)
  --    Build-depends: SDL == 0.6.*
  --    Cpp-options: -DSDL_WINDOW

source-repository head
    type:     git
    location: git://r0q.ath.cx/vis
