cabal-version:      2.2
name:               ghc-vis
version:            0.9.3.1
license:            BSD-3-Clause
license-file:       LICENSE
category:           GHC, Debug, Development
build-type:         Custom
author:             Dennis Felsing, Joachim Breitner, Contributors
maintainer:         Dennis Felsing <dennis@felsing.org>
homepage:           https://dennis.felsing.org/ghc-vis
copyright:          Dennis Felsing 2012-2018
synopsis:           Live visualization of data structures in GHCi
description:        Visualize live data structures in GHCi. Evaluation is not
                    forced and you can interact with the visualized data
                    structures. This allows seeing Haskell's lazy evaluation
                    and sharing in action.
                    .
                    See <https://dennis.felsing.org/ghc-vis/#basic-usage> for the
                    basic usage of ghc-vis or watch a short video demonstrating
                    how it can be used with GHCi's debugger:
                    <https://dennis.felsing.org/ghc-vis/#combined-debugger>

tested-with: GHC == 9.8.1, GHC == 9.6.3, GHC == 9.4.7, GHC == 8.8.4, GHC == 8.6.5
data-files: ghci data/main.ui data/welcome.svg data/legend_graph.svg data/legend_list.svg data/icon_collapse.svg data/icon_evaluate.svg data/hover_collapse.svg data/hover_evaluate.svg
Extra-source-files: nonghci-test.hs

flag graph
  Default: True
  Description: "Enable graph view using Graphviz"

flag full
  Default: True
  Description: "Full ghc-vis window: decorations, buttons, legend"

--flag sdl
--  Default: False
--  Description: "SDL window"

custom-setup
  setup-depends: base  >= 4 && < 5, Cabal >= 1.24 && < 4, filepath

Library
  Exposed-modules: GHC.Vis
  Autogen-Modules: Paths_ghc_vis
  Other-modules: GHC.Vis.Internal GHC.Vis.Types GHC.Vis.View.List GHC.Vis.View.Common Paths_ghc_vis
  Default-Language: Haskell2010
  Build-depends: base >= 4.5 && < 5,
                 mtl >= 2.0,
                 fgl >= 5.4,
                 deepseq >= 1.3,
                 text >= 0.11,
                 transformers >= 0.3,
                 containers >= 0.4,
                 gtk3 >= 0.12,
                 svgcairo >= 0.12,
                 cairo >= 0.12,
                 ghc-heap-view >= 0.6
  Hs-source-dirs: src/
  Ghc-options: -Wall -fno-warn-unused-do-bind

  if flag(graph)
      Other-modules: GHC.Vis.View.Graph.Parser GHC.Vis.View.Graph
      Build-depends: graphviz >= 2999.17,
                     xdot >= 0.3
      Cpp-options: -DGRAPH_VIEW

  if flag(full)
      Cpp-options: -DFULL_WINDOW

  --if flag(sdl)
  --    Build-depends: SDL == 0.6.*
  --    Cpp-options: -DSDL_WINDOW

source-repository head
    type:     git
    location: https://github.com/def-/ghc-vis.git
