Name: eghci
Version: 0.1
Copyright: BSD3
License: BSD3
License-File: LICENSE
-- Author: XXX
Build-Type: Simple
Cabal-Version: >= 1.6
Maintainer: Dennis Felsing <dennis@felsin9.de>
Category: Compilers/Interpreters
Synopsis: Extensible GHCi
Description: None yet
Homepage: http://felsin9.de/nnis/ghc-vis

flag ghc-704
    Description: for GHC 7.4

Executable eghci
  Main-is: Main.hs
  if flag(ghc-704) {
    Other-modules:  Eghci704.GhciMonad
                    Eghci704.InteractiveUI
                    Eghci704.GhciTags
                    Eghci704.Main

    Build-Depends: base         == 4.*,
                   array        >= 0.4,
                   bytestring   >= 0.10,
                   directory    >= 1.2,
                   filepath     >= 1.3,
                   process      >= 1.1,
                   mtl          >= 2.1,
                   transformers >= 0.3,
                   haskeline    >= 0.7,
                   ghc          >= 7.4

    Hs-source-dirs: src/

    if os(windows)
        Build-Depends: Win32
    else
        Build-Depends: unix

    Build-Depends: ghc-paths
    cpp-Options: -DGHCI
    ghc-options: -threaded

    Extensions: CPP, MagicHash, UnboxedTuples, PatternGuards,
                ForeignFunctionInterface, EmptyDataDecls,
                TypeSynonymInstances, MultiParamTypeClasses,
                FlexibleInstances, Rank2Types, ScopedTypeVariables,
                DeriveDataTypeable

    GHC-Options: -Wall -fno-warn-orphans -fno-warn-name-shadowing
  } else {
    Other-modules:  Eghci706.GhciMonad
                    Eghci706.InteractiveUI
                    Eghci706.GhciTags
                    Eghci706.Main

    Build-Depends: base         == 4.*,
                   array        >= 0.4,
                   bytestring   >= 0.9,
                   directory    >= 1.1,
                   filepath     >= 1.3,
                   process      >= 1.1,
                   mtl          >= 2.1,
                   transformers >= 0.3,
                   haskeline    >= 0.7,
                   ghc          >= 7.6

    Hs-source-dirs: src/

    if os(windows)
        Build-Depends: Win32
    else
        Build-Depends: unix

    Build-Depends: ghc-paths
    cpp-Options: -DGHCI
    ghc-options: -threaded

    Extensions: CPP, MagicHash, UnboxedTuples, PatternGuards,
                ForeignFunctionInterface, EmptyDataDecls,
                TypeSynonymInstances, MultiParamTypeClasses,
                FlexibleInstances, Rank2Types, ScopedTypeVariables,
                DeriveDataTypeable

    GHC-Options: -Wall -fno-warn-orphans -fno-warn-name-shadowing
  }
